# lpt

./: lpt.bas  lpt.bi  lpt.wfbe  package-lock.json
event/: click.bi  cookiestore.bas  eventclick.bas  stores.bi
lpt/lpt/: lpt.sln
lpt/lpt/lpt/: Program.cs  Startup.cs
lpt/lpt/lpt/Pages/: About.cshtml.cs  Contact.cshtml.cs  Error.cshtml.cs  Index.cshtml.cs  _Layout.cshtml  _ViewImports.cshtml
lpt/lpt/lpt/Properties/: launchSettings.json
lpt1/: .anjuta_sym_db.db  configure.ac
lpt1/.anjuta/session/: anjuta.session  dock-layout.xml
lpt1/src/: Makefile.am  main.c
lpt2/: package.json
lpt3/: dub.json
lpt3/source/: app.d
